--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "paratime",
   "version": "0.0.0",
+  "main": "./src/main.js",
   "scripts": {
     "ng": "ng",
+    "electron": "ng build --base-href ./ && electron .",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
@@ -28,10 +30,14 @@
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.12.47",
+    "bluebird": "^3.7.2",
     "codelyzer": "^5.1.2",
+    "dexie": "^3.0.1",
+    "dexie-export-import": "^1.0.0-rc.2",
+    "electron": "^9.0.4",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
@@ -40,6 +46,7 @@
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.3",
+    "sqlite3": "^4.2.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
