--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "electron": "^9.0.4",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "jquery": "^3.5.1",
     "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
