--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "ng2-tooltip-directive": "^2.9.20",
     "protractor": "~5.4.3",
     "sqlite3": "^4.2.0",
     "ts-node": "~8.3.0",
