--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./src/",
+    "baseUrl": "./src",
     "outDir": "./dist",
     "sourceMap": true,
     "declaration": false,
@@ -14,8 +14,10 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    
   },
+
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
