Started adding time to task

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "electron": "ng build --base-href ./ && electron .",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder", 
+    "dist": "electron-builder",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
@@ -21,6 +21,7 @@
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
     "@angular/forms": "~9.1.0",
+    "@angular/localize": "^9.1.12",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
@@ -35,10 +36,13 @@
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.47",
+    "angular5-time-picker": "^1.0.8",
     "bluebird": "^3.7.2",
+    "bootstrap": "^4.5.0",
     "codelyzer": "^5.1.2",
     "dexie": "^3.0.1",
     "dexie-export-import": "^1.0.0-rc.2",
@@ -52,7 +56,10 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "luxon": "^1.24.1",
+    "ng-pick-datetime": "^7.0.0",
     "ng2-tooltip-directive": "^2.9.20",
+    "ngx-material-timepicker": "^5.5.3",
     "protractor": "~5.4.3",
     "sqlite3": "^4.2.0",
     "ts-node": "~8.3.0",
