--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,12 @@
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2015",
+    "target": "ES6",
     "lib": [
       "es2018",
       "dom"
     ],
-    
+
   },
 
   "angularCompilerOptions": {
