--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES6",
+    "watch": true,
     "lib": [
       "es2018",
       "dom"
