--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.0",
+    "@angular-devkit/build-angular": "^0.1000.8",
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
@@ -48,6 +48,7 @@
     "dexie-export-import": "^1.0.0-rc.2",
     "electron": "^9.0.4",
     "electron-packager": "^15.0.0",
+    "eventbus-ts": "^1.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jquery": "^3.5.1",
