--- a/tsconfig.serve.json
+++ b/tsconfig.serve.json
@@ -1,8 +1,6 @@
 {
-  "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./src",
-    "outDir": "./dist",
+    "baseUrl": "src",
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
@@ -11,16 +9,18 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES6",
-    "watch": true,
+    "watch": false,
     "lib": [
       "es2018",
       "dom"
     ],
-
   },
-
-  "angularCompilerOptions": {
-    "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
-  }
+  "files": [
+    "main.ts",
+    "preload.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
 }
