--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "ngx-material-timepicker": "^5.5.3",
     "protractor": "~5.4.3",
     "sqlite3": "^4.2.0",
+    "ts-data.stack": "^1.0.6",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
